--- a/api/templates/preview.html
+++ b/api/templates/preview.html
@@ -98,6 +98,7 @@
         <div class="text">
             <div class="artist">Artist</div>
             <div class="song">Song</div>
+            <div id="bars"></div>
         </div>
     </div>
     
