--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -107,6 +107,9 @@
                 <div class="text">
                     <div class="song">{{song_name}}</div>
                     <div class="artist">{{artist_name}}</div>
+                    <div id="bars">
+                        {{content_bar|safe}}
+                    </div>
                 </div>
 
                 {% else %}
